# [m]- blahalhjaljkalkjlajazkljklqjsd qslkdjqs lkdjqsl
#      qmlfkmzkk qskdjfmqslfk mlqzemfj qmlj mldf
#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

# bug.txt should follow the exact same format

31/08/2002 (Jir)
[D]- CS_MIMIC allows FEAT_SECRET to mimic the surroundings.
[G]- high archery+mastery yields *ID* on ammo made.
[I]- 'Identify possessions' uses 'I' key in place of 'i' (same with Inventory)
[I]- Orchast activation (detect_monsters_xxx)
[M]- monster AI is tuned for new terrains.
[O]- store buys (*Defender*) as if it's (+0, +0)
[O]- Mummy Wrapping (tool 
[B]- some store owners didn't have 'cost(C:)' entry. (same with ToME)
[B]- build_room_vault crashed.
[B]- wrong death reason was shown when killed by a trap.

30/08/2002 (Jir)
# 'rm lib/save/*; cd src; make clean; make' (as usual)
[D]- wilderness houses have smaller chance of having 'non-enterable doors'.
     (dwelling_check_entrance)
[D]- town walls are FEAT_PERM_EXTRA (and not FEAT_PERM_SOLID) now
[D]- d_info.txt is backported (dungeons are merely scattered in the wilderness)
[D]- dungeon_type refers to dungeon_info_type.
[G]- player can extend V-house for a price.
[G]- player is affected when (s)he makes a potion shatter.
[G]- wilderness travel with WoR is limited by radius (RECALL_MAX_RANGE)
[I]- 'known' towns display (~7)
[I]- player can view wilderness map in town via '~8'
[I]- 'New Character' is always 'N)'
[O]- scroll of wilderness mapping.
[O]- 'Scourge' added from RFE
[P]- Player shimmers (get_monster_color)
[m]- legality check for store commands. (store_attest_command)
[m]- removed a number of compiler warnings
[B]- wild_add_uhouse was called with wpos instead of h_ptr(rd_server_savefile)
[B]- black market was shovel store (oops)
[B]- DSM activation required mimicry skill.