@@ -17,7 +17,7 @@ META_ADDRESS = "mangband.org"
 # Support for binding to an alternative IP is temporarily unsupported in
 # mangband.cfg, #define BIND_NAME and BIND_IP in config.h and recompile.
 
-BIND_NAME = "64.53.71.115"
+BIND_NAME = "Europe2.TomeNET.net"
 # BIND_IP = "64.53.71.115"
 
 # Port numbers to use. [18348,18349]
