@@ -22,6 +22,9 @@
 
 # bug.txt should follow the exact same format
 
+01/09/2002
+[m]- BIND_NAME works in tomenet.cfg
+
 31/08/2002 (Jir)
 [D]- CS_MIMIC allows FEAT_SECRET to mimic the surroundings.
 [G]- high archery+mastery yields *ID* on ammo made.
